entity, repo Category